# netbox-it-landscape

./: .gitattributes  .gitignore  CHANGELOG.md  LICENSE  README.fr.md  README.md  ROADMAP.md  pyproject.toml
.github/: configuration.testing.py
.github/workflows/: ci.yml  publish.yml
contrib/netbox-config/: plugins.py
docs/screenshots/: README.md
netbox_it_landscape/: __init__.py  bundles.py  choices.py  filtersets.py  forms.py  maturity.py  models.py  navigation.py  search.py  seeding.py  tables.py  template_content.py  urls.py  views.py
netbox_it_landscape/api/: serializers.py  urls.py  views.py
netbox_it_landscape/locale/fr/LC_MESSAGES/: django.mo  django.po
netbox_it_landscape/management/commands/: import_it_landscape.py
netbox_it_landscape/migrations/: 0001_initial.py  0002_remove_application_netbox_it_landscape_application_unique_process_name_and_more.py  0003_application_auth_modes.py
netbox_it_landscape/templates/netbox_it_landscape/: application.html  applicationflow.html  businessdomain.html  businessprocess.html
netbox_it_landscape/templates/netbox_it_landscape/cascade/: simulator.html
netbox_it_landscape/templates/netbox_it_landscape/inc/: applications_panel.html  site_panel.html
netbox_it_landscape/templates/netbox_it_landscape/landscape/: applicative.html  business.html  comparison.html  flux.html  kpi.html  wizard.html
netbox_it_landscape/tests/: test_authentication.py  test_cascade.py  test_import.py  test_permissions.py  test_wizard.py  utils.py
netbox_it_landscape/views/: __init__.py  base.py  cascade.py  crud.py  landscape.py  wizard.py
